--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                 <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNavDropdown">
 
                     <ul class="navbar-nav d-flex align-items-center">
-                        <li class="nav-item px-2 border-end">
+                        <li class="nav-item px-2 for-border-right">
                             <a class="nav-link active" aria-current="page" href="#">সর্বশেষ</a>
                         </li>
-                        <li class="nav-item dropdown px-2 border-end">
+                        <li class="nav-item dropdown px-2 for-border-right">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 বাংলাদেশ
@@ -111,19 +111,19 @@
                                 <li><a class="dropdown-item" href="#">শিক্ষা</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item px-2 border-end">
+                        <li class="nav-item px-2 for-border-right">
                             <a class="nav-link" href="#">বিশ্ব</a>
                         </li>
-                        <li class="nav-item px-2 border-end">
+                        <li class="nav-item px-2 for-border-right">
                             <a class="nav-link" href="#">খেলা</a>
                         </li>
-                        <li class="nav-item px-2 border-end">
+                        <li class="nav-item px-2 for-border-right">
                             <a class="nav-link" href="#">বিনোদন</a>
                         </li>
-                        <li class="nav-item px-2 border-end">
+                        <li class="nav-item px-2 for-border-right">
                             <a class="nav-link" href="#">বাণিজ্য</a>
                         </li>
-                        <li class="nav-item dropdown px-2 border-end">
+                        <li class="nav-item dropdown px-2 for-border-right">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 ইসলামী জীবন
@@ -133,17 +133,17 @@
                                 <li><a class="dropdown-item" href="#">প্রিন্ট</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item px-2 border-end">
+                        <li class="nav-item px-2 for-border-right">
                             <a class="nav-link" href="#">জীবনযাপন</a>
                         </li>
-                        <li class="nav-item px-2 border-end">
+                        <li class="nav-item px-2 for-border-right">
                             <a class="nav-link" href="#">বসুন্ধরা শুভসংঘ</a>
                         </li>
-                        <li class="nav-item px-2 border-end">
+                        <li class="nav-item px-2 for-border-right">
                             <a class="nav-link text-info" href="#">ভিডিও</a>
                         </li>
 
-                        <li class="nav-item dropdown px-2 border-end">
+                        <li class="nav-item dropdown px-2 for-border-right">
                             <a class="nav-link dropdown-toggle text-success" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 পত্রিকা
@@ -159,7 +159,7 @@
                             </ul>
                         </li>
 
-                        <li class="nav-item dropdown px-2 border-end">
+                        <li class="nav-item dropdown px-2 for-border-right">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 ফিচার
@@ -255,15 +255,17 @@
                         <h5 class="fw-bold">আজকের পত্রিকা</h5>
                         <div class=" border border-bottom-3 w-25 border-danger" border-3></div>
                     </div>
-                    <ul class="list-unstyled mb-0">
+                    <div class="footer-menu-hover">
+                        <ul class="list-unstyled mb-0">
 
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">প্রথম পাতা</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">খেলা</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">শুভসংঘ</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">শেষের পাতা</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">খবর</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">দেশে দেশে</a></li>
-                    </ul>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">প্রথম পাতা</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">খেলা</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">শুভসংঘ</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">শেষের পাতা</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">খবর</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">দেশে দেশে</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <!-- second part end -->
 
@@ -273,15 +275,17 @@
                         <h5 class="fw-bold">অনলাইন</h5>
                         <div class=" border border-bottom-3 w-25 border-danger" border-3></div>
                     </div>
-                    <ul class="list-unstyled mb-0">
+                    <div class="footer-menu-hover">
+                        <ul class="list-unstyled mb-0">
 
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">জাতীয়</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">বিশ্ব</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">বিনোদন</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">সারাবাংলা</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">বাণিজ্য</a></li>
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">খেলাধুলা</a></li>
-                    </ul>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">জাতীয়</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">বিশ্ব</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">বিনোদন</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">সারাবাংলা</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">বাণিজ্য</a></li>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">খেলাধুলা</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <!-- Third part end -->
 
@@ -291,11 +295,15 @@
                         <h5 class="fw-bold">বিজ্ঞাপন</h5>
                         <div class=" border border-bottom-3 w-25 border-danger" border-3></div>
                     </div>
-                    <ul class="list-unstyled mb-0">
+                    <div class="footer-menu-hover">
+                        <ul class="list-unstyled mb-0">
 
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">মূল্য তালিকা (প্রিন্ট ভার্সন)</a></li>
-                       
-                    </ul>
+                            <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">মূল্য তালিকা
+                                    (প্রিন্ট
+                                    ভার্সন)</a></li>
+
+                        </ul>
+                    </div>
                 </div>
                 <!-- Fourth part end -->
             </div>
@@ -304,17 +312,18 @@
             <!--========= Footer terms and condition menu Start ============= -->
             <div class="row">
                 <div class="col-md-6">
-                    <span class="text-secondary">সম্পাদক : হাসান হাফিজ</span>
+                    <span class="text-secondary">সম্পাদক : xyz </span>
                 </div>
-                <div class="col-md-5">
-                   <ul class="list-unstyled d-flex justify-content-between mb-0">
+                <div class="col-md-5 footer-menu-hover">
+                    <ul class="list-unstyled d-flex justify-content-between mb-0">
 
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">আমাদের সম্পর্কে</a></li>
+                        <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">আমাদের সম্পর্কে</a>
+                        </li>
                         <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">শর্তাবলী</a></li>
                         <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">গোপনীয়তা নীতি</a></li>
                         <li class="mb-2"><a href="#" class="text-decoration-none text-secondary">যোগাযোগ করুন</a></li>
-                    
-                    </ul> 
+
+                    </ul>
                 </div>
             </div>
             <!--========= Footer terms and condition menu End ============= -->
