--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!-- ======== Top Part Date and Logo End ======== -->
 
-    <!-- ======== Navbar Section Start ======== -->
+        <!-- ======== Navbar Section Start ======== -->
 
     <section>
         <nav class="navbar navbar-expand-lg bg-body-tertiary py-0">
@@ -122,13 +122,13 @@
                                 পত্রিকা
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">এক নজরে</a></li>
-                                <li><a class="dropdown-item" href="#">প্রথম পাতা</a></li>
-                                <li><a class="dropdown-item" href="#">শেষের পাতা</a></li>
-                                <li><a class="dropdown-item" href="#">খবর</a></li>
-                                <li><a class="dropdown-item" href="#">খেলা</a></li>
-                                <li><a class="dropdown-item" href="#">দেশে দেশে</a></li>
-                                <li><a class="dropdown-item" href="#">প্রিয় দেশ</a></li>
+                                <li><a class="dropdown-item" href="category.html">এক নজরে</a></li>
+                                <li><a class="dropdown-item" href="category.html">প্রথম পাতা</a></li>
+                                <li><a class="dropdown-item" href="category.html">শেষের পাতা</a></li>
+                                <li><a class="dropdown-item" href="category.html">খবর</a></li>
+                                <li><a class="dropdown-item" href="category.html">খেলা</a></li>
+                                <li><a class="dropdown-item" href="category.html">দেশে দেশে</a></li>
+                                <li><a class="dropdown-item" href="category.html">প্রিয় দেশ</a></li>
                             </ul>
                         </li>
 
@@ -138,13 +138,13 @@
                                 ফিচার
                             </a>
                             <ul class="dropdown-menu feature-dropdown-position">
-                                <li><a class="dropdown-item" href="#">ডাক্তার আছেন</a></li>
-                                <li><a class="dropdown-item" href="#">চাকরি আছে</a></li>
-                                <li><a class="dropdown-item" href="#">ঈদ বিনোদন</a></li>
-                                <li><a class="dropdown-item" href="#">ঈদ সংখ্যা ২০২৪</a></li>
-                                <li><a class="dropdown-item" href="#">ঈদ উৎসব ২০২৪</a></li>
-                                <li><a class="dropdown-item" href="#">ঈদ সংখ্যা ২০২৫</a></li>
-                                <li><a class="dropdown-item" href="#">সিলেবাসে নেই </a></li>
+                                <li><a class="dropdown-item" href="category.html">ডাক্তার আছেন</a></li>
+                                <li><a class="dropdown-item" href="category.html">চাকরি আছে</a></li>
+                                <li><a class="dropdown-item" href="category.html">ঈদ বিনোদন</a></li>
+                                <li><a class="dropdown-item" href="category.html">ঈদ সংখ্যা ২০২৪</a></li>
+                                <li><a class="dropdown-item" href="category.html">ঈদ উৎসব ২০২৪</a></li>
+                                <li><a class="dropdown-item" href="category.html">ঈদ সংখ্যা ২০২৫</a></li>
+                                <li><a class="dropdown-item" href="category.html">সিলেবাসে নেই </a></li>
                             </ul>
                         </li>
                     </div>
@@ -163,25 +163,25 @@
                                 বাংলাদেশ
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">জাতীয়</a></li>
-                                <li><a class="dropdown-item" href="#">সারাবাংলা</a></li>
-                                <li><a class="dropdown-item" href="#">রাজধানী</a></li>
-                                <li><a class="dropdown-item" href="#">রাজনীতি</a></li>
-                                <li><a class="dropdown-item" href="#">আইন-আদালত</a></li>
-                                <li><a class="dropdown-item" href="#">শিক্ষা</a></li>
+                                <li><a class="dropdown-item" href="category.html">জাতীয়</a></li>
+                                <li><a class="dropdown-item" href="category.html">সারাবাংলা</a></li>
+                                <li><a class="dropdown-item" href="category.html">রাজধানী</a></li>
+                                <li><a class="dropdown-item" href="category.html">রাজনীতি</a></li>
+                                <li><a class="dropdown-item" href="category.html">আইন-আদালত</a></li>
+                                <li><a class="dropdown-item" href="category.html">শিক্ষা</a></li>
                             </ul>
                         </li>
                         <li class="nav-item px-2 for-border-right">
-                            <a class="nav-link" href="#">বিশ্ব</a>
+                            <a class="nav-link" href="category.html">বিশ্ব</a>
                         </li>
                         <li class="nav-item px-2 for-border-right">
-                            <a class="nav-link" href="#">খেলা</a>
+                            <a class="nav-link" href="category.html">খেলা</a>
                         </li>
                         <li class="nav-item px-2 for-border-right">
-                            <a class="nav-link" href="#">বিনোদন</a>
+                            <a class="nav-link" href="category.html">বিনোদন</a>
                         </li>
                         <li class="nav-item px-2 for-border-right">
-                            <a class="nav-link" href="#">বাণিজ্য</a>
+                            <a class="nav-link" href="category.html">বাণিজ্য</a>
                         </li>
                         <li class="nav-item dropdown px-2 for-border-right">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -189,15 +189,15 @@
                                 ইসলামী জীবন
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">অনলাইন</a></li>
-                                <li><a class="dropdown-item" href="#">প্রিন্ট</a></li>
+                                <li><a class="dropdown-item" href="category.html">অনলাইন</a></li>
+                                <li><a class="dropdown-item" href="category.html">প্রিন্ট</a></li>
                             </ul>
                         </li>
                         <li class="nav-item px-2 for-border-right">
-                            <a class="nav-link" href="#">জীবনযাপন</a>
+                            <a class="nav-link" href="category.html">জীবনযাপন</a>
                         </li>
                         <li class="nav-item px-2 for-border-right">
-                            <a class="nav-link" href="#">বসুন্ধরা শুভসংঘ</a>
+                            <a class="nav-link" href="category.html">বসুন্ধরা শুভসংঘ</a>
                         </li>
                         <li class="nav-item px-2 for-border-right">
                             <a class="nav-link text-info" href="#">ভিডিও</a>
@@ -209,13 +209,13 @@
                                 পত্রিকা
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">এক নজরে</a></li>
-                                <li><a class="dropdown-item" href="#">প্রথম পাতা</a></li>
-                                <li><a class="dropdown-item" href="#">শেষের পাতা</a></li>
-                                <li><a class="dropdown-item" href="#">খবর</a></li>
-                                <li><a class="dropdown-item" href="#">খেলা</a></li>
-                                <li><a class="dropdown-item" href="#">দেশে দেশে</a></li>
-                                <li><a class="dropdown-item" href="#">প্রিয় দেশ</a></li>
+                                <li><a class="dropdown-item" href="category.html">এক নজরে</a></li>
+                                <li><a class="dropdown-item" href="category.html">প্রথম পাতা</a></li>
+                                <li><a class="dropdown-item" href="category.html">শেষের পাতা</a></li>
+                                <li><a class="dropdown-item" href="category.html">খবর</a></li>
+                                <li><a class="dropdown-item" href="category.html">খেলা</a></li>
+                                <li><a class="dropdown-item" href="category.html">দেশে দেশে</a></li>
+                                <li><a class="dropdown-item" href="category.html">প্রিয় দেশ</a></li>
                             </ul>
                         </li>
 
@@ -225,13 +225,13 @@
                                 ফিচার
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">ডাক্তার আছেন</a></li>
-                                <li><a class="dropdown-item" href="#">চাকরি আছে</a></li>
-                                <li><a class="dropdown-item" href="#">ঈদ বিনোদন</a></li>
-                                <li><a class="dropdown-item" href="#">ঈদ সংখ্যা ২০২৪</a></li>
-                                <li><a class="dropdown-item" href="#">ঈদ উৎসব ২০২৪</a></li>
-                                <li><a class="dropdown-item" href="#">ঈদ সংখ্যা ২০২৫</a></li>
-                                <li><a class="dropdown-item" href="#">সিলেবাসে নেই </a></li>
+                                <li><a class="dropdown-item" href="category.html">ডাক্তার আছেন</a></li>
+                                <li><a class="dropdown-item" href="category.html">চাকরি আছে</a></li>
+                                <li><a class="dropdown-item" href="category.html">ঈদ বিনোদন</a></li>
+                                <li><a class="dropdown-item" href="category.html">ঈদ সংখ্যা ২০২৪</a></li>
+                                <li><a class="dropdown-item" href="category.html">ঈদ উৎসব ২০২৪</a></li>
+                                <li><a class="dropdown-item" href="category.html">ঈদ সংখ্যা ২০২৫</a></li>
+                                <li><a class="dropdown-item" href="category.html">সিলেবাসে নেই </a></li>
                             </ul>
                         </li>
 
@@ -254,8 +254,6 @@
         </nav>
     </section>
     <!-- ======== Navbar Section End ======== -->
-
-
 
     <!--============================================================================================
                             Header Section End
@@ -2361,7 +2359,7 @@
 
     <!-- For border background start -->
     <section class="bg-light py-md-5 py-3 mt-md-5 mt-3">
-        
+
     </section>
     <!-- For border background End -->
 
