--- a/single.html
+++ b/single.html
@@ -291,11 +291,11 @@
                             <span class="text-secondary">২০ অক্টোবর, ২০২৫ ১৪:৪৯</span>
 
                             <!-- share icons -->
-                            <div class="mt-md-4 mt-2">
+                            <div class="mt-md-4 mt-3">
                                 <h6 class="text-center text-success">শেয়ার</h6>
                                 <hr class="mt-2">
 
-                                <ul class="list-unstyled text-center">
+                                <ul class="list-unstyled text-center d-md-block d-flex justify-content-between align-items-center">
                                     <li class="p-2"><a href="#"><i class="bi bi-facebook"></i></a></li>
                                     <li class="p-2"><a href="#"><i class="bi bi-linkedin"></i></a></li>
                                     <li class="p-2"><a href="#"><i class="bi bi-twitter"></i></a></li>
@@ -635,7 +635,7 @@
                     <!-- Section Title End -->
                     <div class="row">
                         <!--===== item start ===== -->
-                        <div class="col-md-3">
+                        <div class="col-md-3 mb-md-0 mb-3">
                             <div class="position-relative">
                                 <img src="images/fakrul.jpg" alt="Photo" class="img-fluid rounded-2">
 
@@ -649,7 +649,7 @@
                         <!--===== item end ===== -->
 
                         <!--===== item start ===== -->
-                        <div class="col-md-3">
+                        <div class="col-md-3 mb-md-0 mb-3">
                             <div class="position-relative">
                                 <img src="images/fakrul.jpg" alt="Photo" class="img-fluid rounded-2">
 
@@ -663,7 +663,7 @@
                         <!--===== item end ===== -->
 
                         <!--===== item start ===== -->
-                        <div class="col-md-3">
+                        <div class="col-md-3 mb-md-0 mb-3">
                             <div class="position-relative">
                                 <img src="images/fakrul.jpg" alt="Photo" class="img-fluid rounded-2">
 
@@ -677,7 +677,7 @@
                         <!--===== item end ===== -->
 
                         <!--===== item start ===== -->
-                        <div class="col-md-3">
+                        <div class="col-md-3 mb-md-0 mb-3">
                             <div class="position-relative">
                                 <img src="images/fakrul.jpg" alt="Photo" class="img-fluid rounded-2">
 
@@ -714,7 +714,7 @@
             <!--========== Footer menu Start ========== -->
             <div class="row py-md-5 py-3">
                 <!-- first part start  -->
-                <div class="col-md-3">
+                <div class="col-md-3 mb-md-0 mb-4">
                     <div>
                         <h5 class="fw-bold">মোবাইল অ্যাপস ডাউনলোড করুন</h5>
                         <div class=" border border-bottom-3 w-25 border-danger" border-3></div>
@@ -746,7 +746,7 @@
                 <!-- first part end -->
 
                 <!-- second part start  -->
-                <div class="col-md-3">
+                <div class="col-md-3 mb-md-0 mb-4">
                     <div class="mb-3">
                         <h5 class="fw-bold">আজকের পত্রিকা</h5>
                         <div class=" border border-bottom-3 w-25 border-danger" border-3></div>
@@ -766,7 +766,7 @@
                 <!-- second part end -->
 
                 <!-- Third part start  -->
-                <div class="col-md-3">
+                <div class="col-md-3 mb-md-0 mb-4">
                     <div class="mb-3">
                         <h5 class="fw-bold">অনলাইন</h5>
                         <div class=" border border-bottom-3 w-25 border-danger" border-3></div>
@@ -786,7 +786,7 @@
                 <!-- Third part end -->
 
                 <!-- Fourth part start  -->
-                <div class="col-md-3">
+                <div class="col-md-3 mb-md-0 mb-4">
                     <div class="mb-3">
                         <h5 class="fw-bold">বিজ্ঞাপন</h5>
                         <div class=" border border-bottom-3 w-25 border-danger" border-3></div>
