--- a/category.html
+++ b/category.html
@@ -302,9 +302,9 @@
                 <!--=== First Part Start  ===-->
                 <div class="col-12 col-md-9">
                     <!-- row start  -->
-                    <div class="row mb-md-4 mb-2">
+                    <div class="row mb-md-4 mb-3">
 
-                        <div class="col-12 col-md-7">
+                        <div class="col-12 col-md-7 mb-md-0 mb-3">
                             <div class="position-relative">
                                 <img src="images/bang-players.jpg" alt="Player's Photo" class="img-fluid rounded-3">
                                 <div class="position-absolute start-0 bottom-0 ">
@@ -382,7 +382,7 @@
                     <!-- row end  -->
                     <!-- row start  -->
                     <div class="row mb-md-4 mb-2">
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-md-0 mb-3">
                             <div>
                                 <a href="single.html"><img src="images/khela.jpg" alt="Fakrul's photo"
                                         class="img-fluid rounded-3"></a>
@@ -401,7 +401,7 @@
                             <small class="text-secondary">১ ঘণ্টা আগে</small>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-md-0 mb-3">
                             <div>
                                 <a href="single.html"><img src="images/khela.jpg" alt="Fakrul's photo"
                                         class="img-fluid rounded-3"></a>
@@ -420,7 +420,7 @@
                             <small class="text-secondary">১ ঘণ্টা আগে</small>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-md-0 mb-3">
                             <div>
                                 <a href="single.html"><img src="images/khela.jpg" alt="Fakrul's photo"
                                         class="img-fluid rounded-3"></a>
@@ -446,7 +446,7 @@
                             <hr>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-md-0 mb-3">
                             <div>
                                 <a href="single.html"><img src="images/khela.jpg" alt="Fakrul's photo"
                                         class="img-fluid rounded-3"></a>
@@ -465,7 +465,7 @@
                             <small class="text-secondary">১ ঘণ্টা আগে</small>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-md-0 mb-3">
                             <div>
                                 <a href="single.html"><img src="images/khela.jpg" alt="Fakrul's photo"
                                         class="img-fluid rounded-3"></a>
@@ -484,7 +484,7 @@
                             <small class="text-secondary">১ ঘণ্টা আগে</small>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-md-0 mb-3">
                             <div>
                                 <a href="single.html"><img src="images/khela.jpg" alt="Fakrul's photo"
                                         class="img-fluid rounded-3"></a>
