--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                     class="bi bi-youtube"></i></a></li>
                         <li><a href="#" class="text-decoration-none text-secondary me-2"><i
                                     class="bi bi-threads-fill"></i></a></li>
-                        <li><a href="#" class="text-decoration-none text-secondary me-2"><i
+                        <li><a href="search.html" class="text-decoration-none text-secondary me-2"><i
                                     class="bi bi-search"></i></a></li>
                         <li><a href="#" class="text-decoration-none text-secondary me-2">
                                 <i class="bi bi-calendar-date"></i>
